fix visibility toggles

--- a/client/sass/components/_imageSizeModal.sass
+++ b/client/sass/components/_imageSizeModal.sass
@@ -6,4 +6,4 @@
 	padding: 10px 20px
 
 	&:hover
-		background-color: #2b2b2b
+		background-color: $editor-border
